[gd_scene load_steps=3 format=2]

[ext_resource path="res://views/editor/common/spinbox/spinbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://views/nodes/noise_preview.gd" type="Script" id=2]


[node name="NoisePreview" type="VBoxContainer"]
margin_right = 99.0
margin_bottom = 20.0
rect_min_size = Vector2( 170, 0 )
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 170.0
margin_bottom = 20.0
text = "Show Preview"

[node name="Container" type="VBoxContainer" parent="."]
visible = false
margin_top = 24.0
margin_right = 175.0
margin_bottom = 227.0

[node name="TextureRect" type="TextureRect" parent="Container"]
margin_right = 170.0
margin_bottom = 170.0
rect_min_size = Vector2( 170, 170 )
expand = true

[node name="SpinBox" parent="Container" instance=ExtResource( 1 )]
margin_top = 179.0
margin_right = 175.0
margin_bottom = 203.0
min_value = 1.0
max_value = 512.0
step = 1.0
value = 128.0
allow_lesser = false
spinbox_name = "Preview Size"
[connection signal="pressed" from="Button" to="." method="_on_button_preview_pressed"]
[connection signal="value_changed" from="Container/SpinBox" to="." method="_on_preview_size_changed"]
